# nib

./: .gitignore  main.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preload.js
.github/workflows/: build-linux.yml  build-windows.yml
rust-backend/: .gitattributes  .yarnrc.yml  Cargo.toml  index.d.ts  index.js  package.json
rust-backend/src/: lib.rs
src/: index.html
src/css/: base.css  components.css  controls.css  dialogs.css  editor.css  file-tree.css  katex.min.css  layout.css  markdown-preview.css  overlays.css  primitives.css  print.css  scrollbar.css  settings-backup.css  settings-fields.css  settings-shell.css  settings.css  sidebar.css  titlebar.css  toc.css  window.css
src/js/: app.js  codemirror-entry.js  console-bridge.js  electron-api.js  file-tree.js  file-types.js  markdown-preview.js  markdown-table.js  path-info.js  raw-tooltip.js  resize.js  scrollbar.js  settings.js  settingsService.js  sidebar.js  sidebarViews.js  tag-search.js  titlebar-search.js  toc.js  utils.js
src/js/app/: chrome.js  dom.js  editorSurface.js  fileMetaTooltip.js  format.js  persistence.js  settingsPanel.js  vault.js
src/js/editor/: autosave.js  open-file.js  session.js  stats.js
src/js/libs/: codemirror.js  katex.min.js
src/js/markdown/: code-hscroll.js  decorations.js  glyphs.js  hscrollbar.js  image-resolver.js  katex-macros.js  keymaps.js  live-preview.js  math-field.js  md-extensions.js  scanner.js  smart-table.js  table-cells.js  table-doc.js  table-menu.js  table-model.js  table-view.js  widgets.js
src/js/state/: appState.js  editorState.js  (+5 more)
(+2 files in other folders)
